# komandinis-projektas_cpp_2_semestras

./: .gitignore  LFF.xlsx  Suvestinė.xlsx  readme.md
financeManager/: CMakeLists.txt  CMakeLists.txt.user.26da6b7  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
financeManager/dao/: EntryDAO.cpp  EntryDAO.h
financeManager/data/: expense.csv  income.csv
financeManager/filter/: AmountFilter.cpp  AmountFilter.h  BaseFilter.cpp  BaseFilter.h  DateFilter.cpp  DateFilter.h  Filter.h  NameFilter.cpp  NameFilter.h  TypeFilter.cpp  TypeFilter.h
financeManager/model/: Entry.cpp  Entry.h  Expense.cpp  Expense.h  Income.cpp  Income.h
financeManager/service/: EntryService.cpp  EntryService.h
